--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Anh Nguyen's Portfolio</title>
+        <title>Anh Nguyen - Portfolio</title>
         <link rel="icon" href="./img/icon.jpg" type="image/jpg">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +37,7 @@
         <div class="profile">
             <img src="./img/yourpho.png" class="profile__portrait" alt="A photo of me">
             <h1> Hello World! </h1>
-            <p> My name is Anh. I am a <span>web</span> developer and a landscaper from Baton Rouge </p>
+            <p> My name is Anh. I am a <span>web</span> developer from Baton Rouge </p>
 
             <span>
                 <a href="#">Default Link</a>
