--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Anh Ng - Portfolio</title>
+        <title>Anh Nguyen - About</title>
         <link rel="icon" href="./img/icon.jpg" type="image/jpg">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +40,7 @@
                         <p> This page is about myself. This is what I enjoy doing: </p>
                         <p>Front-end development</p>
                         <p>Back-end development</p>
-                        <p>Landscape architecture</p>
+                        <p>Digital art</p>
                         <a href="files/cv.pdf" class="button__third" download> Download my CV </a>
                     </div>
 
@@ -670,6 +670,11 @@
                     <td>JavaScript</td>
                     <td>1</td>
                     <td>Intermediate</td>
+                </tr>
+                <tr>
+                    <td>Photoshop</td>
+                    <td>2</td>
+                    <td>Beginner</td>
                 </tr>
             </tbody>
         </table>
