--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </header>
 
         <div class="profile">
-            <img src="./img/yourpho.png" class="profile__portrait" alt="A photo of me">
+            <img src="./img/logo-color.png" class="profile__portrait" alt="A photo of me">
             <h1> Hello World! </h1>
             <p> My name is Anh. I am a <span>web</span> developer from Baton Rouge </p>
         </div>
