--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,9 @@
             <div class="social-media">
                 <p> Find me on </p>
                 <p>
-                    <img src="./img/git.png" alt="github">
-                    <img src="./img/twit.png" alt="twitter">
-                    <img src="./img/likin.png" alt="linkedin">
+                    <a href="https://github.com/anhnguyengocv" target="_blank"><img src="./img/git.png" alt="git"></a>
+                    <a href="https://twitter.com/anhnguyengocv" target="_blank"><img src="./img/twit.png" alt="twitter"></a>
+                    <a href="https://www.linkedin.com/in/anh-nguyen-89b145290" target="_blank"><img src="./img/likin.png" alt="linkedin"></a>
                 </p>
             </div>
         </footer>
